@@ -71,6 +71,9 @@ android {
         unitTests {
             includeAndroidResources = true
             returnDefaultValues = true
+            all {
+                jvmArgs '--add-opens', 'java.base/sun.misc=ALL-UNNAMED'
+            }
         }
     }
 }
